# MealMe

./: .gitignore  README.md
.github/workflows/: cmake-single-platform.yml
MealMe/: CMakeLists.txt  Main.qml  main.cpp  qml.qrc
MealMe/qml/: main.qml  splashScreen.qml
MealMe/qml/components/: CircularProgressBar.qml  CustomTextField.qml  Operation.qml  SplashAnimation.qml  WindowMode.qml
MealMe/setup/: CMakeLists.txt
MealMe/setup/include/: AppManager.h
MealMe/setup/src/: AppManager.cpp
